--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div class="container">
     <h2 class="mb-5 font-weight-bold">Hakkımızda</h2>
     <hr class="ayrac"><i class="fas fa-leaf igri"></i>
-    <p>ilişim Dünyası, bir Web hizmetleri(hosting,domain,vps,dedicated,ssl,web tasarım) firmasıdır. Ancak; standart, sıradan bir web hizmetleri firmasından farklıdır. Türkiye'de hızla büyüyen internet dünyasında yer alan firmaların web sayfalarını barındırmak, kurulum için yardımcı olmak, isteğe bağlı olarak aracılık hizmeti görmek, web tasarım hizmeti vermek amacıyla kurulmuştur. İlk olarak 2007 yılında bayii olarak işe başlamış olup, kısa sürede kendi uzman ekibiyle kurumsallaşmaya başlamıştır. Uzman ekibimiz ile kaliteli hizmeti, uygun fiyatlarla istifadenize sunmayı düstur edindik ve bu doğrultuda çalışmalarımızı sürdürmekteyiz.</p>
+    <p>Bilişim Dünyası, bir Web hizmetleri(hosting,domain,vps,dedicated,ssl,web tasarım) firmasıdır. Ancak; standart, sıradan bir web hizmetleri firmasından farklıdır. Türkiye'de hızla büyüyen internet dünyasında yer alan firmaların web sayfalarını barındırmak, kurulum için yardımcı olmak, isteğe bağlı olarak aracılık hizmeti görmek, web tasarım hizmeti vermek amacıyla kurulmuştur. İlk olarak 2007 yılında bayii olarak işe başlamış olup, kısa sürede kendi uzman ekibiyle kurumsallaşmaya başlamıştır. Uzman ekibimiz ile kaliteli hizmeti, uygun fiyatlarla istifadenize sunmayı düstur edindik ve bu doğrultuda çalışmalarımızı sürdürmekteyiz.</p>
   </div>
 </section>
 
